added a beer/post route, and we fixed the favorites post route and did a bunch of yaml shit
