# api/controllers/favorites.js
@@ -18,42 +18,23 @@ module.exports.returnFavorites = function returnFavorites(req, res, next) {
 };
 
 module.exports.addFavorite = function addFavorite(req, res, next) {
-  // knex('beers')
-  // .where('bdb_id', req.body.beer_id)
-  // .then((res) => {
-  //   if (res.length === 0) {
-  //     return knex('beers')
-  //     .insert({
-  //         bdb_id: req.body.beer_id,
-  //         name: req.body.name,
-  //         abv: req.body.abv,
-  //         ibu: req.body.ibu,
-  //         description: req.body.description,
-  //         label_url: req.body.label_url,
-  //         type_name: req.body.type_name,
-  //     }, '*')
-  //     .then((res) => {
-  //       knex.destroy();
-  //     })
-  //   }
-  // })
-  // .then((res) => {
-  //   return knex('beers')
-  //   .where('bdb_id', req.body.beer_id)
-  //   .select('id')
-  // })
-  // .then((res) => {
-  //   let id = res[0];
-  //   console.log(id);
-  // })
-  //
-  // let resp = {}
-  // // resp.comment =
-  // // resp.rating =
-  // // resp.beer_name =
-  // // resp.label_url =
-  // res.set('Content-Type', 'application/json')
-  // res.status(200).send(resp)
+  let inputFav = {
+    rating: req.body.rating,
+    comment: req.body.comment,
+    beer_id: req.body.beer_id,
+    user_id: req.body.user_id,
+  }
+
+  knex('user_beers')
+  .insert(inputFav, '*')
+  .then((result) => {
+    let returnFav = result[0];
+    delete returnFav.id;
+    delete returnFav.created_at;
+    delete returnFav.updated_at;
+    res.set('Content-Type', 'application/json')
+    res.status(200).json(returnFav);
+  })
 };
 
 module.exports.deleteFromFavorites = function deleteFromFavorites(req, res, next) {
